# hollowdb-vector

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml  tests-fix.yml  tests.yml
indexing/: .gitignore  Cargo.toml  README.md  lens_dataset
indexing/dataset/: create_dataset.rs  dataset.json
indexing/src/: ann_lib.rs  ann_parent.rs  lib.rs
inference/: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
inference/examples/: fundBundlr.ts  run-data-process-example.ts  run-knn-example.ts  uploader-arweave-example.ts
inference/examples/dataset/: dataset-dir.txt
inference/examples/deploy/: deploy-local.ts  deploy-mainnet.ts  deploy-testnet.ts
inference/examples/wallets/: wallet-dir.txt
inference/shared/: Cargo.toml
inference/shared/src/: lib.rs
inference/shared/src/contract_utils/: foreign_call.rs  handler_result.rs  js_imports.rs  kv_operations.rs  mod.rs
inference/src/: index.ts
inference/src/binding_generators/: generate-ts.ts  generation-utils.ts
inference/src/config/: initialState.json
inference/src/contract/danny-flat-inference/: Cargo.toml
inference/src/contract/danny-flat-inference/src/: ann_lib.rs  lib.rs
inference/src/contract/definition/: Cargo.toml
inference/src/contract/definition/src/: action.rs  error.rs  fetch.rs  generate_json.rs  lib.rs  state.rs
inference/src/contract/implementation/: Cargo.toml
inference/src/contract/implementation/src/: contract.rs  lib.rs
inference/src/contract/implementation/src/actions/: fetcher.rs  knn.rs  mod.rs
inference/src/contract/implementation/src/contract_utils/: entrypoint.rs  mod.rs
inference/src/core/: index.ts
inference/src/core/modules/: knn.ts  process.ts
inference/src/deploy/: deploy.ts  index.ts
inference/src/utils/: addFunds.ts  connectArweave.ts  connectContract.ts  createTestnetWallet.ts  dataUploader.ts  fundBundlr.ts  getWarpInstance.ts  index.ts  loadWallet.ts
lib/: index.cjs  index.cjs.map  index.d.ts  index.d.ts.map  index.mjs  index.mjs.map
proto/: hnsw_comm.d.ts  hnsw_comm.js  hnsw_comm.proto  request.d.ts  request.js  request.proto
src/: hnsw.ts  index.ts
src/db/: hollowdb.ts
src/db/common/: index.ts
src/db/interfaces/: index.ts
src/proto/: index.ts
src/types/: index.ts
src/utils/: index.ts
test/: heap.test.ts  hnsw.test.ts  hollow.test.ts  proto.test.ts
test/data/: contract.js  data.json  index.ts  state.json
test/db/: kvMemory.ts  memory.ts  redis.ts
test/python/: main.py
