[package]
name = "indexing"
version = "0.1.0"
authors = ["andthattoo <omer@firstbatch.xyz"]

edition = "2018"

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.0"
bincode = "1.3.3"
num = "0.4"
indexmap = "1.9.1"
rayon = "1.5.3"
time-graph = "0.1.3"
rustc-hash = "1.1.0"
dashmap = "5.4.0"
log = "0.4"
simple_logger = "4.0.0"
clap = { version = "4.1.3", features = ["derive"] }


[dev-dependencies]

[[bin]]
name = "train"
path = "bin/train.rs"
