[package]
name = "warp_wasm_utils"
version = "0.1.0"
edition = "2021"
description = "Warp WASM contract utils for rust contracts"
license = "MIT"

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1", features = ["derive"] }
js-sys = "0.3.56"
async-trait = "0.1.56"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false

