[package]
name = "danny-flat-inference"
version = "0.1.0"
authors = ["andthattoo <omer@firstbatch.xyz>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
warp_wasm_utils = { path = "../../../shared" }
serde_json = "1.0"
serde-pickle = "1.0"
bincode = "1.3.3"
num = "0.4"
rayon = "1.5.3"
time-graph = "0.1.3"
rustc-hash = "1.1.0"
getrandom = { version = "0.2", features = ["js"] }
schemars = "0.8.10"
chrono = "0.4.23"